# plugins_javamelody

./: .buckconfig  .gitignore  BUCK  BUILD  MODULE.bazel  WORKSPACE  external_plugin_deps.MODULE.bazel  external_plugin_deps.bzl  groups  javamelody_plugin_deps.lock.json  javamelody_third_party_runtime_jars.allowlist.txt  project.config
gerrit-extension-api/: BUCK
lib/: BUCK
lib/gerrit/: BUCK
src/main/java/com/googlesource/gerrit/plugins/javamelody/: CapabilityChecker.java  GerritMonitoringFilter.java  HttpModule.java  JavamelodyMonitoringRequestWrapper.java  Module.java  MonitoringCapability.java  MonitoringDataSourceInterceptor.java  MonitoringTopMenu.java
src/main/resources/Documentation/: about.md  build.md  config.md  database-monitoring.md
src/test/java/com/googlesource/gerrit/plugins/javamelody/: GerritMonitoringFilterTest.java
tools/: workspace-status.sh  workspace_status.py
tools/bzl/: plugin.bzl
tools/eclipse/: BUILD  project.sh
